--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,9 @@
 <TITLE>C64 network</TITLE>
 
 <H1>The C64 network!</H1>
-<p>Welcome to <A HREF="http://www.c64-network.org">c64-network.org</A>! C64-network.org is a Commodore C64 emulator based on the <A HREF="http://frodo.cebix.net/">Frodo</A> source code by Christian Bauer. In addition to the features provided by Frodo, it adds network support and a port to the Nintendo Wii.
+<p>Welcome to <A HREF="http://www.c64-network.org">c64-network.org</A>! C64-network.org is a Commodore C64 emulator based on the <A HREF="http://frodo.cebix.net/">Frodo</A> source code by Christian Bauer. In addition to the features provided by Frodo, it adds network support and a port to the Nintendo Wii.</p>
+
+<p><A HREF="http://www.c64-network.org/stats.html">The statistics page</A> shows current connection statistics for C64-network.org.</p>
 
 <H2>Help needed!</H2>
 <p>The C64 network needs your help! Primarily, I need help with building the source code for Windows and Mac OS, and also web design and graphical design. See <A HREF="http://simonkagstrom.livejournal.com">this blog entry</A>
@@ -17,7 +19,7 @@ You can download source and binaries for the C64 network here:
 
 <UL>
 <LI><A HREF="">Source (v1)</A></LI>
-<LI><A HREF="">Linux binary (v1)</A></LI>
+<LI><A HREF="">Linux binary, x86_32 (v1)</A></LI>
 <LI><A HREF="">Windows binary (v1)</A></LI> (not yet!)
 <LI><A HREF="">Mac OS binary (v1)</A></LI> (not yet!)
 </UL>
