Update web page

--- a/web/index.html
+++ b/web/index.html
@@ -8,10 +8,33 @@
 <p><A HREF="http://www.c64-network.org/stats.html">The statistics page</A> shows current connection statistics for C64-network.org.</p>
 
 <H2>Help needed!</H2>
-<p>The C64 network needs your help! Primarily, I need help with building the source code for Windows and Mac OS, and also web design and graphical design. See <A HREF="http://simonkagstrom.livejournal.com">this blog entry</A>
+<p>The C64 network needs your help! Primarily, I need help with building the source code for Windows and Mac OS, and also web design and graphical design. The list of things to do are:
+
+<UL>
+<LI><B>Redesigning the UI</B>: I'm a lousy graphics artist, so help me out here. In the new version, you can easily switch between different "gui themes", so copy the default one and make your own and then put it on <A HREF="http://wiibrew.org/wiki/Talk:Frodo">Wiki page</A>.</LI>
+
+<LI><B>Redesigning the web pages</B>: The <A HREF="http://www.c64-network.org/index.html">static web page</A> (this one) would be nice to get better looking, but primarily the <A HREF="http://www.c64-network.org/stats.html">generated statistics web page</A> needs CSS and better looks. It's a simple python script (see <A HREF="http://code.google.com/p/frodo-wii/source/browse/trunk/network-broker/stats.py">network-broker/stats.py</A> in the source code), which you can run by itself to generate the web page (you'll also need png's for the screenshots)</LI>
+
+<LI><b>Builds for Windows and Mac OS</b>: Should be simple on Mac OS, and on windows you should use cygwin.</LI>
+
+<LI><b>Debugging!</b>: Try it out</LI>
+</UL>
+
+<p>Mail me at <A HREF="mailto:simon.kagstrom@gmail.com">simon.kagstrom@gmail.com</A> if you want to help out.</p>
+
+
+<H2>Features</H2>
+<UL>
+<LI>All features of the regular Frodo</LI>
+<LI>Network play!</LI>
+<LI>A network "broker" where you can connect with other people, as well as sending messages to them</LI>
+<LI>A Nintendo Wii port</LI>
+<LI>Source code cleanup</LI>
+</UL>
 
 <H2>Screenshots</H2>
 <p><IMG SRC="ikplus.png">
+
 <p><IMG SRC="emulator-main.png">
 
 <H2>Download</H2>
