--- a/web/index.html
+++ b/web/index.html
@@ -32,22 +32,23 @@
 <LI>Source code cleanup</LI>
 </UL>
 
-<H2>Screenshots</H2>
-<p><IMG SRC="ikplus.png">
-
-<p><IMG SRC="emulator-main.png">
-
 <H2>Download</H2>
 You can download source and binaries for the C64 network here:
 
 <UL>
-<LI><A HREF="">Source (v1)</A></LI>
-<LI><A HREF="">Linux binary, x86_32 (v1)</A></LI>
+<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network-1-rc1.tar.gz">Source (v1)</A></LI>
+<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network.org-linux_x86-32-1-rc1.bin.tar.gz">Linux binary, x86_32 (v1)</A></LI>
 <LI><A HREF="">Windows binary (v1)</A></LI> (not yet!)
 <LI><A HREF="">Mac OS binary (v1)</A></LI> (not yet!)
+<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network.org-wii-1-rc1.bin.tar.gz">Ninendo Wii binary (v1)</A></LI>
 </UL>
 
 <p>The source code is also available for checkout on <A HREF="http://code.google.com/p/frodo-wii/source/checkout">googlecode</A>.
+
+<H2>Screenshots</H2>
+<p><IMG SRC="ikplus.png">
+
+<p><IMG SRC="emulator-main.png">
 
 </BODY>
 </HTML>
