Update web page

--- a/web/index.html
+++ b/web/index.html
@@ -36,11 +36,11 @@
 You can download source and binaries for the C64 network here:
 
 <UL>
-<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network-1-rc3.tar.gz">Source (v1-rc2)</A></LI>
-<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network.org-linux_x86-32-1-rc3.bin.tar.gz">Linux binary, x86_32 (v1-rc2)</A></LI>
-<LI><A HREF="">Windows binary (v1)</A></LI> (not yet!)
-<LI><A HREF="">Mac OS binary (v1)</A></LI> (not yet!)
-<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network.org-wii-1-rc3.bin.tar.gz">Ninendo Wii binary (v1-rc2)</A></LI>
+<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network-2.tar.gz">Source (v2)</A></LI>
+<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network.org-linux_x86-32-2.bin.tar.gz">Linux binary, x86_32 (v2)</A></LI>
+<LI><A HREF="">Windows binary (v2)</A></LI> (not yet!)
+<LI><A HREF="">Mac OS binary (v2)</A></LI> (not yet!)
+<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network.org-wii-2.bin.tar.gz">Ninendo Wii binary (v2)</A></LI>
 </UL>
 
 <p>The source code is also available for checkout on <A HREF="http://code.google.com/p/frodo-wii/source/checkout">googlecode</A>.
