Update web page again

--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
 You can download source and binaries for the C64 network here:
 
 <UL>
-<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network-2.tar.gz">Source (v2)</A></LI>
+<LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network.org-2.tar.gz">Source (v2)</A></LI>
 <LI><A HREF="http://frodo-wii.googlecode.com/files/c64-network.org-linux_x86-32-2.bin.tar.gz">Linux binary, x86_32 (v2)</A></LI>
 <LI><A HREF="">Windows binary (v2)</A></LI> (not yet!)
 <LI><A HREF="">Mac OS binary (v2)</A></LI> (not yet!)
